# talks

./: .gitignore  README.md  why-bazel.md
.devcontainer/: devcontainer.json
bazel-platforms/: MODULE.bazel  README.md  slides.md
bazel-platforms/demo/: .bazelrc  BUILD.bazel  MODULE.bazel  hello_world.txt  linux_main.cc  multi_platform.bzl  win_main.cc
bazel-platforms/demo/toolchains/7zip/: defs.bzl  toolchain.bzl
bazel-platforms/demo/toolchains/mingw/: BUILD.bazel  BUILD.mingw.tmpl.bzl  configure.tmpl.bzl  toolchain.bzl
bazel-platforms/demo/toolchains/wine/: BUILD.bazel  cc_test_toolchain.bzl  prefix.bzl  wine-run.tmpl.sh
bazel-platforms/toolchains/7zip/: BUILD.bazel  BUILD.linux.7zip.bzl  defs.bzl
bazel-platforms/toolchains/mingw/: BUILD.mingw.tmpl.bzl  toolchain.bzl
bazel-platforms/toolchains/wine/: BUILD.bazel  cc_test_toolchain.bzl
