load(":multi_platform.bzl", "transition_binary", "transition_test")

cc_library(
    name = "lib",
    srcs = ["lib.cc"],
    hdrs = ["lib.hh"],
)

cc_test(
    name = "lib_test.exe",
    srcs = glob(["*_test.cc"]),
    deps = [
        ":lib",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

transition_test(
    name = "win_hello_test.exe",
    dep  = ":lib_test.exe",
    platform   = "//platforms:win_amd64_mingw",
)

transition_test(
    name = "linux_lib_test.exe",
    dep  = ":lib_test.exe",
    platform   = "//platforms:linux_amd64_gcc",
)

cc_binary(
    name = "hello_worlder.exe",
    srcs = ["main.cc"],
    deps = [
        ":lib",
    ],
)

transition_binary(
    name = "win_hello_worlder.exe",
    dep  = ":hello_worlder.exe",
    platform   = "//platforms:win_amd64_mingw",
)

transition_binary(
    name = "linux_hello_worlder.exe",
    dep  = ":hello_worlder.exe",
    platform   = "//platforms:linux_amd64_gcc",
)