http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

http_file = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_file",
)

# mingw
# All downloads page: https://www.mingw-w64.org/downloads/
# mingw-builds-binaries prebuilt binaries: https://github.com/niXman/mingw-builds-binaries/releases
http_file(
    name = "dist_mingw_x86_64",
    urls = [
        "https://github.com/niXman/mingw-builds-binaries/releases/download/13.2.0-rt_v11-rev1/x86_64-13.2.0-release-posix-seh-ucrt-rt_v11-rev1.7z",
    ],
)

# 7zip
# Download page: https://www.7-zip.org/download.html

http_archive(
    name = "dist_7zip_linux_x86_64",
    urls = [
        "https://www.7-zip.org/a/7z2407-linux-x64.tar.xz",
    ],
    integrity = "sha256-SkeHen9uun/myQD3N5uyBhuWILWIzzGJ2ZriqKqo9QM=",
    build_file = "//toolchains/7zip:BUILD.linux.7zip.bzl",
)

# Register 7zip toolchains
register_toolchains("//toolchains/7zip:7zip_linux_x64_toolchain")

# Register mingw toolchains
register_toolchains("//toolchains/mingw:mingw_x86_64_toolchain")