bazel_dep(name = "platforms", version = "0.0.10")

http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

http_file = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_file",
)

# mingw
# All downloads page: https://www.mingw-w64.org/downloads/

# mingw-builds-binaries prebuilt binaries for windows: https://github.com/niXman/mingw-builds-binaries/releases
http_file(
    name = "dist_mingw_win_x86_64",
    urls = [
        "https://github.com/niXman/mingw-builds-binaries/releases/download/13.2.0-rt_v11-rev1/x86_64-13.2.0-release-posix-seh-ucrt-rt_v11-rev1.7z",
    ],
    integrity = "sha256-R17nLFzhvVSj48M0vdO+XmV1M0GE/ZcYATqjYsmBnS8=",
)

# 7zip
# Download page: https://www.7-zip.org/download.html
http_archive(
    name = "dist_7zip_linux_x86_64",
    urls = [
        "https://www.7-zip.org/a/7z2407-linux-x64.tar.xz",
    ],
    integrity = "sha256-SkeHen9uun/myQD3N5uyBhuWILWIzzGJ2ZriqKqo9QM=",
    build_file = "//toolchains/7zip:BUILD.linux.7zip.bzl",
)

# Register 7zip toolchains
register_toolchains("//toolchains/7zip:7zip_linux_x64_toolchain")

# llvm-mingw: https://github.com/mstorsjo/llvm-mingw/releases
mingw_linux_toolchain = use_repo_rule(
    "//toolchains/mingw:toolchain.bzl",
    "mingw_linux_toolchain"
)

mingw_linux_toolchain(
    name = "mingw_linux_x86_64_toolchain",
    os   = "linux",
    arch = "x86_64",
    urls = [
        "https://github.com/mstorsjo/llvm-mingw/releases/download/20240726/llvm-mingw-20240726-ucrt-ubuntu-20.04-x86_64.tar.xz",
    ],
    sha256 = "6bb0a93a7bd8b51315224f79ddb84cb55634e5409c76d597d81e7430bb240f32",
    strip_prefix = "llvm-mingw-20240726-ucrt-ubuntu-20.04-x86_64",
)

# Register mingw toolchains
register_toolchains("@mingw_linux_x86_64_toolchain//:toolchain")