exports_files(["defs.bzl"])

load(":toolchain.bzl", "toolchain_7z")

toolchain_type(name = "toolchain_type")

toolchain_7z(
    name = "7zip_linux_x64",
    exe  = "@dist_7zip_linux_x86_64//:exe",
)

toolchain(
    name = "7zip_linux_x64_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":7zip_linux_x64",
    toolchain_type = ":toolchain_type",
)