load("//toolchains/7zip:defs.bzl", "unzip_7z")
load(":toolchain.bzl", "mingw_cc_toolchain_config")

unzip_7z(
    name = "mingw_x86_64",
    archive = "@dist_mingw_x86_64//file",
)

mingw_cc_toolchain_config(
    name = "mingw_x86_64_toolchain_config"
)

cc_toolchain(
    name = "mingw_x86_64_cc_toolchain",
    toolchain_identifier = "mingw_x86_64",
    toolchain_config = ":mingw_x86_64_toolchain_config",
    all_files = ":mingw_x86_64",
    compiler_files = ":mingw_x86_64",
    dwp_files = ":mingw_x86_64",
    linker_files = ":mingw_x86_64",
    objcopy_files = ":mingw_x86_64",
    strip_files = ":mingw_x86_64",
    supports_param_files = 0,
)

toolchain(
    name = "mingw_x86_64_toolchain",
    toolchain = ":mingw_x86_64_cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:windows",
    ],
)